# tp-lab-4-1

./: .gitignore  a.out  menu.txt
include/: Automata.h  Menu.h  States.h  VendingMachine.hpp  automata.h  automataNoDialog.h  states.h
src/: Automata.cpp  CMakeLists.txt  Menu.cpp  VendingMachine.cpp  automata.cpp  automataNoDialog.cpp  data.txt  main  main.cpp  main1.cpp  mainNoDialog.cpp  menu.txt  price.txt  scenario.cpp  task.cpp  tests.cpp
test/: data.txt  file.txt  test.cpp  tests.cpp
